--- a/schools/project/index.html
+++ b/schools/project/index.html
@@ -28,7 +28,7 @@
   <li class="page-item"><a class="page-link" onclick="next()" >Next</a></li>
 </ul>
 <ul class="pagination mx-auto" style="display:inline-block" >
-  <li class="page-item"><a class="page-link" href="#" onclick="blank()" >Blank</a></li>
+  <li class="page-item"><a class="page-link" href="" onclick="blank()" >Blank</a></li>
 </ul>
 
       <h1 id="pj_num"> There no project here... </h1>
