--- a/schools/project/index.html
+++ b/schools/project/index.html
@@ -196,7 +196,7 @@
       <tr> <!-- table row-->
           <td><img src="_blank.png" id="n1"></img>    </td> <!-- table data-->
           <td><img src="_blank.png" id="n2"></img>    </td> 
-          <td><img src=_blank.png" id="n3"></img>    </td>
+          <td><img src="_blank.png" id="n3"></img>    </td>
           <td><img src="_blank.png" id="n4"></img>    </td>   
           <td><img src="_blank.png" id="n5"></img>    </td>
           <td><img src="_blank.png" id="n6"></img>    </td>
