--- a/schools/imagecon/index.html
+++ b/schools/imagecon/index.html
@@ -45,7 +45,7 @@
     </div>    
     <div class="row justify-content-center mb-3">
       <div class="col-md-6">
-        <input type="file" id="fileInput" class="form-control-file" multiple accept=".jpg, .jpeg, .png, .webp, .avif, .zip .rar" />
+        <input type="file" id="fileInput" class="form-control-file" multiple accept=".jpg, .jpeg, .png, .webp, .avif, .zip, .rar" />
       </div>
     </div>
     <div class="row justify-content-center mb-3">
