--- a/schools/imagecon/index.html
+++ b/schools/imagecon/index.html
@@ -39,13 +39,12 @@
           <button class="btn btn-primary" onclick="setOutputType('png')">PNG</button>
           <button class="btn btn-primary" onclick="setOutputType('avif')">AVIF</button>
           <button class="btn btn-primary" onclick="setOutputType('webp')">WEBP</button>
-          <button class="btn btn-primary" onclick="setOutputType('jpg')">JPG</button>
         </div>
       </div>
     </div>    
     <div class="row justify-content-center mb-3">
       <div class="col-md-6">
-        <input type="file" id="fileInput" class="form-control-file" multiple accept=".jpg, .jpeg, .png, .webp, .avif, .zip, .rar" />
+        <input type="file" id="fileInput" class="form-control-file" multiple accept=".jpg, .jpeg, .png, .webp, .avif, .zip" />
       </div>
     </div>
     <div class="row justify-content-center mb-3">
@@ -65,15 +64,15 @@
     </div>
   </div>
 
-  <!-- Include JSZip library -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.6.0/jszip.min.js"></script>
-  <!-- Include jQuery -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <!-- Include Popper.js -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-  <!-- Include Bootstrap JavaScript -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <!-- Include your custom script (script.js) -->
+<!-- Include JSZip library -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.6.0/jszip.min.js"></script>
+<!-- Include jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<!-- Include Popper.js -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<!-- Include Bootstrap JavaScript -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!-- Include your custom script (script.js) -->
   <script src="script.js"></script>
 </body>
 </html>
